[gd_scene load_steps=4 format=3 uid="uid://chat_lorax_interface"]

[ext_resource type="Script" path="res://scripts/lorax_chat.gd" id="1_1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.3, 0.1, 0.95)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.9, 0.6, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.9, 0.6, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LoraxChat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="ChatPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBox" type="VBoxContainer" parent="ChatPanel"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="ChatPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LoraxAvatar" type="TextureRect" parent="ChatPanel/VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(50, 50)
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="ChatPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "The Lorax"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="ChatPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="ChatPanel/VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(30, 30)
text = "âœ•"
flat = true

[node name="ChatContainer" type="VBoxContainer" parent="ChatPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="ChatPanel/VBox/ChatContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessagesContainer" type="VBoxContainer" parent="ChatPanel/VBox/ChatContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TypingIndicator" type="Label" parent="ChatPanel/VBox/ChatContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "The Lorax is thinking..."
horizontal_alignment = 1
visible = false

[node name="InputPanel" type="HBoxContainer" parent="ChatPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InputField" type="LineEdit" parent="ChatPanel/VBox/InputPanel"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type your message to the Lorax..."
expand_to_text_length = true

[node name="SendButton" type="Button" parent="ChatPanel/VBox/InputPanel"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_font_sizes/font_size = 16
text = "Send"
